# ddd

./: .gitignore  README.md  cmd.sh
cmd/-/: main.sh
cmd/-trap/: main.sh
cmd/.-init/: main.sh
cmd/.-parse/: main.sh
cmd/.-set-env/: main.sh
cmd/.-settle/: main.sh
cmd/.-trap/: main.sh
cmd/.is-ddd/: main.sh
cmd/.is-wsl/: main.sh
cmd/.throw/: main.sh
cmd/____/: main.sh
cmd/__close__/: main.sh
cmd/__echo__/: main.sh
cmd/__init__/: main.sh
cmd/__is-ddd__/: main.sh
cmd/__is-wsl__/: main.sh
cmd/__name__/: main.sh
cmd/__reload__/: main.sh
cmd/__trap__/: main.sh
cmd/_play/: main.sh
cmd/activate/: main.sh
cmd/build-py/: main.sh
cmd/clean/cmake/: main.sh
cmd/clean/node/: main.sh
cmd/confirm/: main.sh
cmd/deactivate/: main.sh
cmd/docker/: main.sh
cmd/echo/: main.sh
cmd/exe/: main.sh
cmd/exe/ddd/: main.sh
cmd/exe/gtest/: main.sh
cmd/help/: main.sh
cmd/install/: dockerfile  main.sh
cmd/install/ddd/: dockerfile
cmd/install/gtest/: main.sh
cmd/login/: main.sh
cmd/login/ddd/: main.sh
cmd/mkdir/: main.sh
cmd/play/: main.sh
cmd/play_/: main.sh
cmd/profile/: main.sh
cmd/push/: main.sh
cmd/run/: main.sh
cmd/run/ddd/: main.sh
cmd/run/web/: main.sh
cmd/setup/: dockerfile  main.sh
cmd/setup/app/: main.sh
cmd/setup/container/: dockerfile
cmd/setup/gtest/: main.sh
cmd/ssh-keygen/: main.sh
cmd/stop/: main.sh
cmd/stop/ddd/: main.sh
cmd/sudo/: main.sh
cmd/uniq/: main.sh
cmd/upgrade/: main.sh
cmd/verify/: main.sh
src/cxx/.standard/: main.cpp  run.sh
src/cxx/atomic/: main.cpp  run.sh
src/cxx/ddd/: .gitignore  CMakeLists.txt
src/cxx/ddd/src/: main.cpp  test.cpp
src/cxx/example--closure/: main.cpp  run.sh
src/cxx/example--memory-check/: main.cpp
src/cxx/example--value-types/: main.cpp
src/cxx/r-value/: main.cpp
src/cxx/so-loading/: README.md
src/cxx/variadic/: main.cpp  run.sh
src/node/ts/: package.json
src/node/ts/cmd/: run.sh
src/node/ts/src/: Greeter.ts  main.ts
src/node/www/: package.json  tsconfig.json  webpack.config.js
src/node/www/.dist/: index.html
src/node/www/cmd/: build.sh
src/node/www/src/: main.ts
tools/bash/: py2bin.sh
tools/cmake/: CMakeLists.txt
tools/cmd/: close.sh  exec.sh  help.sh  init.sh  reload.sh  reset.sh  set.sh
tools/common/: trap.sh
tools/dockerfile/: dockerfile
tools/install/: docker--linux.sh  nvidia-container--linux.sh  nvidia-driver--linux.sh
tools/installer/: bash.sh  docker.sh
tools/python/ddd/: common.py
tools/python/tools/: __init__.py  fixer.py  remover.py  reporter.py  updater.py
tools/vscode/: launch.json  settings.json
tools/wiki/: cheat-sheet.md
